Issue #7776; fix for overflowing display tab

--- a/web/client/themes/default/less/wizard.less
+++ b/web/client/themes/default/less/wizard.less
@@ -26,7 +26,7 @@
                 &.line {
                     display: none;
                 }
-            } 
+            }
             .custom-color {
                 padding-left: 10px;
             }
@@ -60,6 +60,9 @@
 }
 .ms-wizard > .row{
     margin: 15px;
+}
+.ms-wizard.map-options {
+    overflow-x: hidden;
 }
 .mapstore-step-title {
     font-size: 20px;
